<resources>
    <string name="app_name">MS</string>
    <string name="recommend">推荐</string>
    <string name="direct_broadcast">直播</string>
    <string name="refer">资讯</string>
    <string name="myself">我的</string>
    <string name="yes">确认</string>
    <string name="cancel">取消</string>
    <string name="ok">是</string>
    <string name="no">否</string>
    <string name="has_cancle">已取消</string>
    <string name="clear">清空</string>
    <string name="search">搜索</string>
    <string name="erro_network">网络异常，请检查网络</string>
    <string name="save">保存</string>
    <string name="loading_requesting">正在请求数据...</string>
    <string name="loading_delete">正在删除数据...</string>
    <string name="loading_upload">正在保存数据...</string>
    <string name="loading_download">正在加载数据...</string>
    <string name="loading_login">正在登录账号...</string>
    <string name="login_use">登录后才可操作</string>
    <string name="editor">编辑</string>
    <string name="back">返回</string>
    <string name="sending">发送中…</string>
    <string name="push_success">发送成功</string>
    <string name="push_error">发送失败</string>
    <string name="no_permission">请在权限管理中打开相应权限</string>
    <string name="button_ok">确定</string>
    <string name="please_login_use_scan">登录后才可使用扫描</string>
    <string name="no_connect_dlna">没有可以匹配的DLNA设备</string>
    <string name="exit_one_more_time">再按一次退出聚视界</string>
    <string name="no_update_version">已是最新版本</string>
    <string name="no_wifi_tips">当前非wifi网络状态，是否继续下载？</string>
    <string name="no_storage_space">手机可用空间不足，无法更新</string>
    <string name="error_format_from_server">后台数据格式错误</string>
    <string name="app_update_title">应用更新</string>
    <string name="app_update_content">版本号: v%1$s\r\n版本大小: %2$s\r\n更新日志:\r\n%3$s</string>
    <string name="app_ppdate_immediately">马上更新</string>
    <string name="location_content">您当前所定位的城市为%1$s,是否切换?</string>
    <string name="common_loading_message">正在加载中...</string>
    <string name="common_empty_msg">抱歉,暂未获取到数据!\n请点击屏幕重试~</string>
    <string name="common_error_msg">抱歉,系统出错了!\n请点击屏幕重试~</string>
    <string name="common_no_network_msg">暂未连接上网络!\n请连接后点击屏幕重试~</string>
    <string name="please_login_first">请先登录~</string>
    <string name="latest_information">最新资讯</string>
    <string name="more">更多</string>
    <string name="another_group">换一批</string>
    <string name="hd_live">高清直播</string>
    <string name="subscribe">预约</string>
    <string name="subscribe_success">预约成功</string>
    <string name="cancle_subscribe">取消预约</string>
    <string name="hd_film">高清电影</string>
    <string name="tv_play">电视剧</string>
    <string name="variety">综艺</string>
    <string name="sports">体育</string>
    <string name="click_to_refresh">点击刷新</string>
    <string name="user_center">个人中心</string>
    <string name="link_facility">点击链接设备</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="password_login">密码登录</string>
    <string name="code_login">验证码登录</string>
    <string name="account">账号</string>
    <string name="mobile_num">手机号</string>
    <string name="password">密码</string>
    <string name="input_password">请输入密码</string>
    <string name="authcode">验证码</string>
    <string name="input_authcode">请输入验证码</string>
    <string name="support_chinese_mobile">仅支持中国大陆手机号</string>
    <string name="forget_password">忘记密码</string>
    <string name="get_authcode">获取验证码</string>
    <string name="another_login">其他登录方式</string>
    <string name="erro_account_or_pw">账号或密码有误</string>
    <string name="account_or_pw_can_not_be_null">账号或密码不能为空</string>
    <string name="please_input_auth">请输入验证码</string>
    <string name="erro_auth">验证码有误</string>
    <string name="logging_in">正在登录…</string>
    <string name="fetch_related_info">正在获取相关信息…</string>
    <string name="one_input_mobile">1.输入手机号</string>
    <string name="two_input_code">2.输入验证码</string>
    <string name="three_set_password">3.设置密码</string>
    <string name="set_password">设置密码 6~16位字母和数字</string>
    <string name="confirm_password">确认密码</string>
    <string name="reget_code">重新获取验证码</string>
    <string name="input_safe_code">请输入右图的安全码</string>
    <string name="check_mobile">验证手机号</string>
    <string name="the_code_send_to">验证码短信已经发送到:</string>
    <string name="please_input_code_from_message">请输入短信中的验证码</string>
    <string name="submit_code">提交验证码</string>
    <string name="submit_regist">提交注册</string>
    <string name="please_select_agreement">请选择同意《聚视生活用户协议》</string>
    <string name="regist_success">注册成功</string>
    <string name="registing">正在注册...</string>
    <string name="inconsistent_password">密码不一致</string>
    <string name="erro_password">密码有误,必须6~16位数字和字母</string>
    <string name="erro_repassword">确认密码有误</string>
    <string name="update_password">修改密码成功</string>
    <string name="find_password">找回密码</string>
    <string name="safe_check">安全验证</string>
    <string name="erro_safe_code">安全码错误</string>
    <string name="erro_mobile">手机号码错误</string>
    <string name="please_input_mobile">请输入您的手机号码</string>
    <string name="check">验证</string>
    <string name="next">下一步</string>
    <string name="new_password">新的密码 6~16位字母和数字</string>
    <string name="check_password">确认密码</string>
    <string name="password_is_null">密码不能为空</string>
    <string name="erro_also_password">确认密码错误</string>
    <string name="input_here">在这儿输入内容</string>
    <string name="history_search">历史搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="relation_video">相关视频</string>
    <string name="relation_tolive">相关直播</string>
    <string name="no_login">未登录</string>
    <string name="user_info">个人信息</string>
    <string name="down_to_change_image">修改头像</string>
    <string name="update_name">修改昵称</string>
    <string name="update_mobile">绑定手机号</string>
    <string name="reset_password">修改密码</string>
    <string name="take_photo">拍照</string>
    <string name="album">相册</string>
    <string name="input_update_name">请输入要修改的昵称</string>
    <string name="input_no_emoji">不可输入emoji表情</string>
    <string name="input_update_name_size">昵称长度必须在0~12之间</string>
    <string name="old_password">旧的密码</string>
    <string name="erro_old_pw">旧密码有误</string>
    <string name="erro_new_like_old">新密码与旧密码不可一致</string>
    <string name="update_pw_success">密码修改成功</string>
    <string name="out_of_account">退出账号</string>
    <string name="update_head_img_successfully">修改头像成功</string>
    <string name="smart_home">智慧家庭</string>
    <string name="health_care">健康医疗</string>
    <string name="my_vr">我的VR</string>
    <string name="my_reservation">我的预约</string>
    <string name="watch_history">观看历史</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_save">我的缓存</string>
    <string name="scan">扫一扫</string>
    <string name="projection">投射精彩</string>
    <string name="share_apk_url">分享应用</string>
    <string name="letfun">一起乐</string>
    <string name="ui">切换盒子风格</string>
    <string name="voice">语音控制</string>
    <string name="tp">触控板</string>
    <string name="start_voice">开始语音</string>
    <string name="system_setting">系统设置</string>
    <string name="business_hall">营业厅</string>
    <string name="stb_control">机顶盒管理</string>
    <string name="remote_control">遥控器</string>
    <string name="city_title">选择城市</string>
    <string name="city_current">GPS定位</string>
    <string name="city_text">深圳</string>
    <string name="city_recently">最近定位城市</string>
    <string name="city_hot">热门城市</string>
    <string name="screen_projection">投屏</string>
    <string name="dm_inviter">一起乐</string>
    <string name="send_to_relatives_and_friends">发给盒子</string>
    <string name="collect">收藏</string>
    <string name="collected">已收藏</string>
    <string name="cache">缓存</string>
    <string name="cached">已缓存</string>
    <string name="view_info">查看简介</string>
    <string name="related_recommendation">相关推荐</string>
    <string name="film_introduction">影片介绍</string>
    <string name="main_actor_colon">主演：</string>
    <string name="director_colon">导演：</string>
    <string name="area_colon">地区：</string>
    <string name="release_colon">上映：</string>
    <string name="unknown">未知</string>
    <string name="plot_introduction">剧情介绍</string>
    <string name="select_nums">选集数</string>
    <string name="rewatch">回看</string>
    <string name="nowwatch">正在播放</string>
    <string name="live">直播</string>
    <string name="no_binding_and_toset">请扫一扫机顶盒二维码绑定设备</string>
    <string name="no_connect_and_toset">请扫一扫二维码</string>
    <string name="play_counts_format_1">%1$d次播放</string>
    <string name="play_counts_format_2">%1$s万次播放</string>
    <string name="related_video">相关视频</string>
    <string name="score_label">评分：</string>
    <string name="status_label">更新：</string>
    <string name="episode_total">%1$d集全</string>
    <string name="episode_updated">已更新至%1$d集</string>
    <string name="episode_all_count">共%1$d集</string>
    <string name="vod_share_default_content">精彩不容错过，快来跟我一起看吧!</string>
    <string name="send_to_colon">发送到:</string>
    <string name="can_not_get_devices_please_login_first">无法获取绑定设备信息，请先登录!</string>
    <string name="share_sinaweibo">新浪微博</string>
    <string name="share_qq">QQ</string>
    <string name="share_weichat">微信</string>
    <string name="share_friends">朋友圈</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_qqweibo">腾讯微博</string>
    <string name="watch_record">观看记录</string>
    <string name="browse_within_a_week">一周内浏览</string>
    <string name="browse_more_earlier">更早前浏览</string>
    <string name="all">全部</string>
    <string name="delete">删除</string>
    <string name="from_stb">来自机顶盒</string>
    <string name="from_mobile">来自手机</string>
    <string name="capture_title">扫一扫</string>
    <string name="open_sanqr">打开扫描二维码</string>
    <string name="open_flashlight">打开闪光灯</string>
    <string name="close_flashlight">关闭闪光灯</string>
    <string name="open_image">选择图库</string>
    <string name="permission_open_camera_error">打开相机失败,请确保允许应用使用相机权限后重试!</string>
    <string name="msg_camera_framework_bug">很遗憾，Android 相机出现问题。你可能需要重启设备。</string>
    <string name="scan_tip">请扫描机顶盒首页二维码</string>
    <string name="flashlight">闪光灯</string>
    <string name="gallery">相册</string>
    <string name="result_fail">解析失败，请重试！</string>
    <string name="input_device">输入设备码：</string>
    <string name="please_input_device_sn">请输入设备码~</string>
    <string name="confirm">确定</string>
    <string name="high_settings">高级设置</string>
    <string name="please_scan_the_correct_code">请扫描正确的二维码</string>
    <string name="ap_scanning">正在扫描</string>
    <string name="ap_associated">关联AP成功</string>
    <string name="ap_authenticating">正在验证</string>
    <string name="ap_associating">正在关联AP...</string>
    <string name="ap_completed_successful">连接%1$s成功</string>
    <string name="ap_completed_fail">连接%1$s失败</string>
    <string name="ap_pw_is_wrong">密码错误</string>
    <string name="ap_inactive">AP不可用</string>
    <string name="binding">正在绑定设备,请稍后…</string>
    <string name="binding_success">绑定设备成功~</string>
    <string name="clear_cache">清除缓存</string>
    <string name="push_message">推送消息</string>
    <string name="about_us">关于我们</string>
    <string name="check_update">检查更新</string>
    <string name="about_app">关于聚视界</string>
    <string name="welcome_page">欢迎页</string>
    <string name="choice_link">选择要投射的设备</string>
    <string name="search_device">正在搜索设备...</string>
    <string name="to_search_device">点击搜索设备</string>
    <string name="switch_title">切换盒子风格</string>
    <string name="switch_default">标准版界面</string>
    <string name="switch_child">儿童版界面</string>
    <string name="switch_cool">炫酷版界面</string>
    <string name="local_video">本地视频</string>
    <string name="local_photo">本地相册</string>
    <string name="send_to">发送到:</string>
    <string name="add_new_device">添加新设备</string>
    <string name="choose_again">重新选择</string>
    <string name="send_immediately">立即发送</string>
    <string name="del_attachment_tip">是否删除附件?</string>
    <string name="del_all_tip">是否清空附件和文字?</string>
</resources>